--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,7 @@
 /* style.css */
 body {
     font-family: Arial, sans-serif;
+    background-image: url('../img/36224.jpg');
     color: #fff;
     margin: 0;
     padding: 0;
